--- a/jm_project/WebContent/WEB-INF/web.xml
+++ b/jm_project/WebContent/WEB-INF/web.xml
@@ -1,6 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-  <display-name>jm_project</display-name>
+  <display-name>jsp</display-name>
+  
+  <!-- jsp-config : JSP 문서를 처리할 때 필요한 정보를 제공하는 상위 엘리먼트 -->
+  <jsp-config>
+  	<!-- jsp-property-group : JSP 문서의 그룹을 지정하여 정보를 제공하는 엘리먼트 -->
+  	<jsp-property-group>
+  		<!-- url-pattern : JSP 문서를 그룹화 하기 위한 정보를 설정하는 엘리먼트 -->
+  		<url-pattern>/directive/include_site/*</url-pattern>
+  		<!-- include-prelude : 그룹화된 JSP 문서 앞부분에 포함될 파일을 설정하는 엘리먼트 -->
+  		<include-prelude>/directive/include_site/header.jspf</include-prelude>
+  		<!-- include-coda : 그룹화된 JSP 문서 뒷부분에 포함될 파일을 설정하는 엘리먼트 -->
+  		<include-coda>/directive/include_site/footer.jspf</include-coda>
+  	</jsp-property-group>
+  </jsp-config>
+  
+  
+  <!-- error-page : 웹프로그램에 대한 에러페이지를 제공하기 위한 상위 엘리먼트 -->
+  <error-page>
+  	<!-- exception-type : 웹프로그램 실행에 대한 발생 예외를 설정하는 엘리먼트 -->
+  	<exception-type>java.lang.NullPointerException</exception-type>
+  	<!-- location : 에러페이지의 경로(URL)를 설정하는 엘리먼트 -->
+	<location>/error/error_null.jsp</location>
+  </error-page>
+  
+  <error-page>
+  	<!-- error-code : 에러페이지를 제공하기 위한 에러코드를 설정하는 엘리먼트 -->
+  	<error-code>500</error-code>
+  	<location>/error/error_500.jsp</location>
+  </error-page>
+  
+  <error-page>
+  	<error-code>400</error-code>
+  	<location>/error/error_400.jsp</location>
+  </error-page>
+  
+  <error-page>
+  	<error-code>404</error-code>
+  	<location>/error/error_404.jsp</location>
+  </error-page>
+  
+  <error-page>
+  	<error-code>405</error-code>
+  	<location>/error/error_405.jsp</location>
+  </error-page>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
